<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/rectangleprogramImageView"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:background="@drawable/rectangle_main_program_khusus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:icon="@drawable/back"
            android:clickable="true"
            app:iconSize="25dp"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:backgroundTint="@null"
            android:background="@drawable/button_background_profile_with_shadow"
            style="@style/Widget.MaterialComponents.Button.Circle"
            app:layout_constraintTop_toTopOf="parent"
            app:iconPadding="0dp"
            android:insetTop="0dp"
            android:elevation="3dp"
            android:insetBottom="0dp" />



        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/alatsi"
            android:text="Choose Program"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abel"
            android:text="Make it easier to plan your program"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <Spinner
            android:id="@+id/spinnerProgram"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_signup1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="45dp"
            android:paddingEnd="12dp"
            android:elevation="3dp"
            android:fontFamily="@font/abel"
            android:textColor="@color/color41"
            android:textSize="16sp"
            app:layout_constraintWidth_percent="0.85"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectangleprogramImageView"
            android:spinnerMode="dropdown"
            android:popupBackground="@drawable/rectangle_signup1"/>

        <ImageView
            android:id="@+id/iconprogramImageView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="-5dp"
            android:padding="8dp"
            android:elevation="5dp"
            app:layout_constraintStart_toStartOf="@id/spinnerProgram"
            app:layout_constraintTop_toTopOf="@id/spinnerProgram"
            app:layout_constraintBottom_toBottomOf="@id/spinnerProgram"
            android:src="@drawable/dop2" />

        <ImageView
            android:id="@+id/iconprogramImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="5dp"
            android:padding="12dp"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="@id/spinnerProgram"
            app:layout_constraintTop_toTopOf="@id/spinnerProgram"
            app:layout_constraintBottom_toBottomOf="@id/spinnerProgram"
            android:src="@drawable/arrow_drop" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DateOfProgram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_signup1"
            android:clickable="true"
            android:elevation="3dp"
            android:focusable="true"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerProgram"
            app:layout_constraintWidth_percent="0.85"
            app:startIconDrawable="@drawable/dop"
            app:startIconTint="#FFC745">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDateOfProgram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/abel"
                android:hint="Date of Program"
                android:inputType="none"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/buttonSelectProgram"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_change_password"
            android:clickable="true"
            android:elevation="6dp"
            android:focusable="true"
            android:gravity="center"
            android:onClick="insertProgramDetails"
            android:text="Select"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/zenkakugothicnewbold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DateOfProgram"
            app:layout_constraintWidth_percent="0.35" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>