<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/rectangleMWProgramKhususImageView"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:background="@drawable/rectangle_program_khusus"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/TitleMWProgramKhususTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Maintain Weight"
        android:fontFamily="@font/alatsi"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:elevation="6dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/DateMWProgramKhususTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="27 Mei 2024 - 30 Mei 2024"
        android:fontFamily="@font/abel"
        android:elevation="6dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/TitleMWProgramKhususTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"  />

    <ImageView
        android:id="@+id/rectangleInputWeightMWImageView"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:background="@drawable/rectangle_program_khusus2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangleMWProgramKhususImageView"
        android:layout_marginTop="20dp"/>

    <FrameLayout
        android:id="@+id/startingweightMW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:paddingStart="40dp"
        app:layout_constraintStart_toStartOf="@+id/rectangleInputWeightMWImageView"
        app:layout_constraintTop_toTopOf="@+id/rectangleInputWeightMWImageView"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleInputWeightMWImageView">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewStartingWeightMW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="27sp"
                    android:textColor="#173430"
                    android:fontFamily="@font/zenkakugothicnewbold"/>

                <TextView
                    android:id="@+id/textViewQuantifierStartingWeightMW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textViewStartingWeightMW"
                    android:layout_toEndOf="@+id/textViewStartingWeightMW"
                    android:fontFamily="@font/zenkakugothicnewbold"
                    android:paddingStart="3dp"
                    android:text="kg"
                    android:textColor="#173430"
                    android:textSize="15sp" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textViewStartingWeightLabelMW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Start Weight"
                    android:textSize="15sp"
                    android:textColor="#173430"
                    android:fontFamily="@font/zenkakugothicnewbold" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/currentweightMW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:paddingEnd="40dp"
        app:layout_constraintEnd_toEndOf="@+id/rectangleInputWeightMWImageView"
        app:layout_constraintTop_toTopOf="@+id/rectangleInputWeightMWImageView"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleInputWeightMWImageView">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewCurrentWeightMW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="27sp"
                    android:textColor="#173430"
                    android:fontFamily="@font/zenkakugothicnewbold"/>

                <TextView
                    android:id="@+id/textViewQuantifierCurrentWeightMW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="3dp"
                    android:text="kg"
                    android:textSize="15sp"
                    android:textColor="#173430"
                    android:fontFamily="@font/zenkakugothicnewbold"
                    android:layout_toEndOf="@+id/textViewCurrentWeightMW"
                    android:layout_alignBaseline="@+id/textViewCurrentWeightMW"/>

                <ImageView
                    android:id="@+id/iconeditweightMWImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/edit"
                    android:layout_toEndOf="@+id/textViewQuantifierCurrentWeightMW"
                    app:layout_constraintTop_toTopOf="@+id/textViewCurrentWeightMW" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textViewCurrentWeightLabelMW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Current Weight"
                    android:textSize="15sp"
                    android:textColor="#173430"
                    android:fontFamily="@font/zenkakugothicnewbold" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>



    <ImageView
        android:id="@+id/rectangleGraphicWeightMWImageView"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:elevation="1dp"
        android:background="@drawable/rectangle_program_khusus2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangleInputWeightMWImageView"
        android:layout_marginTop="15dp"/>

    <com.telyu.nourimate.custom.WeightChartView
        android:id="@+id/weightChartMW"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:elevation="3dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangleGraphicWeightMWImageView"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleGraphicWeightMWImageView"
        />


    <ImageView
        android:id="@+id/rectangleInformationWeightMWImageView"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:background="@drawable/rectangle_program_khusus2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangleGraphicWeightMWImageView"
        android:layout_marginTop="15dp"/>

    <ImageView
        android:id="@+id/imageburgerMW"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:elevation="4dp"
        android:src="@drawable/programkhususburger"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@+id/rectangleInformationWeightMWImageView"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleInformationWeightMWImageView"
        app:layout_constraintEnd_toEndOf="@+id/rectangleInformationWeightMWImageView"/>

    <ImageView
        android:id="@+id/rectangleburgerMW"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:background="@drawable/rectangle_burger"
        app:layout_constraintStart_toStartOf="@+id/rectangleInformationWeightMWImageView"
        app:layout_constraintEnd_toStartOf="@+id/imageburgerMW"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleInformationWeightMWImageView"/>

    <TextView
        android:id="@+id/GreatProgramKhususMWTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="You're Great!"
        android:fontFamily="@font/concertone"
        android:textSize="28sp"
        android:textColor="@color/color43"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toTopOf="@+id/rectangleburgerMW"
        app:layout_constraintStart_toStartOf="@+id/rectangleburgerMW"/>

    <TextView
        android:id="@+id/WeightBurgerProgramKhususMWTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weight : 50 kg"
        android:fontFamily="@font/alumnisanssemibold"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="@+id/rectangleburgerMW"
        app:layout_constraintStart_toStartOf="@+id/rectangleburgerMW"/>

    <TextView
        android:id="@+id/heightBurgerProgramKhususMWTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Height : 150 cm"
        android:fontFamily="@font/alumnisanssemibold"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/WeightBurgerProgramKhususMWTextView"
        app:layout_constraintStart_toStartOf="@+id/rectangleburgerMW"/>

    <TextView
        android:id="@+id/LabelBurgerProgramKhususMWTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Keep up the progress, Flint."
        android:fontFamily="@font/abel"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/heightBurgerProgramKhususMWTextView"
        app:layout_constraintStart_toStartOf="@+id/rectangleburgerMW"/>




</androidx.constraintlayout.widget.ConstraintLayout>
