...
        android:layout_height="match_parent"
        android:background="@drawable/rectangle_program_menupage2"
        android:layout_marginTop="70dp" />

    <!-- ImageButton for the menu icon positioned inside the first rectangle -->
    <ImageButton
        android:id="@+id/menuIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/menu"
        android:background="@null"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"/>
...
        android:fontFamily="@font/alatsi"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"/>

    <!-- Button for Restore Program positioned below the first rectangle -->
    <TextView
        android:id="@+id/btnRestoreProgram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Restore Program"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/abel"
...
